# example-native-api-rs

./: .gitignore  Cargo.toml  README.md  build-with-docker-linux  build-with-docker-windows
addin1c/: Cargo.toml
addin1c/src/: lib.rs  macros.rs
conf1c/: ConfigDumpInfo.xml  Configuration.xml
conf1c/DataProcessors/: Обработка1.xml
conf1c/DataProcessors/Обработка1/Forms/: Форма.xml
conf1c/DataProcessors/Обработка1/Forms/Форма/Ext/: Form.xml
conf1c/DataProcessors/Обработка1/Forms/Форма/Ext/Form/: Module.bsl
conf1c/Ext/: HomePageWorkArea.xml
conf1c/Languages/: Русский.xml
example/: Cargo.toml
example/src/: addin2.rs
src/: addin1.rs  addin2.rs  ffi.rs  lib.rs  macros.rs  myaddin.rs  simple.rs
src/add_in/: mod.rs
src/ffi/: connection.rs  init_base.rs  lang_extender.rs  memory_manager.rs  mod.rs  types.rs  utils.rs
